--- a/react-petlist/package.json
+++ b/react-petlist/package.json
@@ -17,9 +17,12 @@
     }
   },
   "dependencies": {
+    "axios": "^0.13.1",
+    "bootstrap": "^3.3.6",
     "flux": "*",
     "react": "^0.14.2",
     "react-ajax": "^0.1.1",
+    "react-bootstrap": "^0.30.0-rc.2",
     "react-dom": "^0.14.1",
     "react-helmet": "^2.2.0",
     "react-inline-css": "^2.0.0",
@@ -27,6 +30,8 @@
     "react-router": "2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^3.0.0",
+    "redux": "^3.5.2",
+    "redux-promise": "^0.5.3",
     "url-loader": "^0.5.7",
     "yargs": "^3.32.0"
   },
@@ -54,6 +59,7 @@
     "react-a11y": "^0.2.6",
     "react-addons-shallow-compare": "^0.14.7",
     "react-addons-test-utils": "^0.14.0",
+    "react-bootstrap": "^0.30.0-rc.2",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
@@ -64,7 +70,8 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.5.0"
+    "webpack-hot-middleware": "^2.5.0",
+    "write-file-webpack-plugin": "^3.1.8"
   },
   "engines": {
     "node": "5.6.0"
